--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ navbar-links:
   My Links:
     - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
     - Learn markdown: "http://www.markdowntutorial.com/"
-  Github: "http://deanattali.com"
+  Github: "https://github.com/rsmecking"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
@@ -70,10 +70,10 @@ social-network-links:
   rss: true
   email: "rsmecking@gmail.com"
 #  facebook: deanattali
-  github: daattali
+  github: rsmecking
 #  twitter: daattali
 #  reddit: yourname
-#  linkedin: daattali
+  linkedin: rsmecking
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
