--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --- General options --- #
 
 # Name of website
-title: Ryan Mecking Portfolio
+title: Ryan Mecking's Portfolio
 
 # Short description of your site
 description: A virtual proof that I'm awesome
@@ -21,14 +21,14 @@ description: A virtual proof that I'm awesome
 # List of links in the navigation bar
 navbar-links:
   About Me: "aboutme"
-  My Links:
-    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
-    - Learn markdown: "http://www.markdowntutorial.com/"
+  Medium Articles:
+    - Runout on Approach: "http://deanattali.com/beautiful-jekyll/"
+#     - Learn markdown: "http://www.markdowntutorial.com/"
   Github: "https://github.com/rsmecking"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/Avatar_IMG.JPG"
+avatar: "/img/Avatar_IMG.JPG"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
