--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ description: A virtual proof that I'm awesome
 navbar-links:
   About Me: "aboutme"
   Medium Articles:
-    - Runout on Approach: "http://deanattali.com/beautiful-jekyll/"
+    - Runout on Approach: "https://medium.com/@rsmecking/runout-on-approach-9c359e2a73b5"
 #     - Learn markdown: "http://www.markdowntutorial.com/"
   Github: "https://github.com/rsmecking"
 
