--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: A virtual proof that I'm awesome
 
 # List of links in the navigation bar
 navbar-links:
-  About Me: "aboutme"
+  # About Me: "aboutme"
   Medium Articles:
     - Runout on Approach: "https://medium.com/@rsmecking/runout-on-approach-9c359e2a73b5"
     - K-means clustering from scratch: "https://medium.com/@rsmecking/k-means-clustering-from-scratch-5bf42bf3be9e"
